--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 sudo: required
+language: generic
+
 services:
   - docker
 
@@ -17,6 +19,6 @@ deploy:
   bucket_path: "frontend"
   on:
     branch: main
-  access_key_id: $AWS_ACCESS_KEY
+  access_key_id: "AWS_ACCESS_KEY"
   secret_access_key: "AWS_SECRET_KEY"    
 
