--- a/.travis.yml
+++ b/.travis.yml
@@ -16,9 +16,9 @@ deploy:
   app: "frontend"
   env: "Frontend-env"
   bucket_name: "elasticbeanstalk-eu-west-2-471063810858"
-  bucket_path: "frontend"
+  bucket_path: "docker"
   on:
     branch: main
-  access_key_id: "AWS_ACCESS_KEY"
-  secret_access_key: "AWS_SECRET_KEY"    
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY 
 
